# structured-prompt-hub

./: LICENSE  README.md  env.example  package.json
python/: pyproject.toml  sentiment_evaluator.py  sentiment_evaluator_with_model.py
src/: sentiment-evaluator.ts
typescript/: package-lock.json  package.json  sentiment-evaluator-with-model.ts  tsconfig.json
